Fix status icon alignment

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -264,7 +264,7 @@ header {
   }
 
   &.finished .task-header .container {
-    padding-left: 18px;
+    padding-left: 32px;
   }
 
   &.finished .task-header .container h3:before {
@@ -274,7 +274,7 @@ header {
     position: absolute;
     top: 0;
     bottom: 5px;
-    left: 0;
+    left: 15px;
     height: 43px;
     background: #3ED33E;
   }
